--- a/angular/index.html
+++ b/angular/index.html
@@ -1,5 +1,6 @@
 <html>
-  <head>
+<head>
+    <base href="/">
     <title>Universal Temperature Controller</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
