--- a/angular/src/index.jetty.html
+++ b/angular/src/index.jetty.html
@@ -9,7 +9,7 @@
 
     <!-- 1. Load libraries -->
      <!-- Polyfill(s) for older browsers -->
-    <script src="https://unpkg.com/core-js@2.4.1"></script>
+    <script src="https://unpkg.com/core-js/client/shim.min.js"></script>
     <script src="https://unpkg.com/zone.js@0.7.8?main=browser"></script>
     <script src="https://unpkg.com/reflect-metadata@0.1.10"></script>
     <script src="https://unpkg.com/systemjs@0.19.39/dist/system.src.js"></script>
